@@ -1,3 +1,7 @@
+2023-02-20  Mark Wielaard  <mark@klomp.org>
+
+	* gnuhash_xlate.h (elf_cvt_gnuhash): memmove any left over bytes.
+
 2022-11-30  Mark Wielaard  <mark@klomp.org>
 
 	* elf.h: Update from glibc.
